<resources>
    <string name="app_name">Printing Press</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_services">Services</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_apply">Apply for Admin</string>
    <string name="menu_about">About Us</string>
    <string name="menu_call">Call</string>
    <string name="menu_privacy">Terms And Privacy</string>
    <string name="search_products">Search for Products</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_login">Login</string>
    <string name="menu_category_detail">Services</string>
    <string name="about_us">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="about_mission">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries.</string>
    <string name="about_vision">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>


    <string name="my_cart">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard_home">DashboardHome</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>