<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.fragments.TermsAndPrivacyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/featureImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/testing"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/featureImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:lineHeight="23dp"
                android:justificationMode="inter_word"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_vision"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:lineHeight="23dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:justificationMode="inter_word"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_mission"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:lineHeight="23dp"
                android:justificationMode="inter_word"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.core.widget.NestedScrollView>